Set up project structure and core types   - Create TypeScript interfaces for ResurrectionContext, DependencyInfo, and TransformationLog   - Set up error handling utilities and logging infrastructure   - Configure VS Code extension activation events for resurrection commands

--- a/codecrypt/package.json
+++ b/codecrypt/package.json
@@ -9,13 +9,22 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+    "onCommand:codecrypt.resurrectRepository",
+    "onCommand:codecrypt.helloWorld"
+  ],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
       {
+        "command": "codecrypt.resurrectRepository",
+        "title": "🧟 CodeCrypt: Resurrect Repository",
+        "category": "CodeCrypt"
+      },
+      {
         "command": "codecrypt.helloWorld",
-        "title": "Hello World"
+        "title": "🧟 CodeCrypt: Hello World",
+        "category": "CodeCrypt"
       }
     ]
   },
