--- a/codecrypt/package.json
+++ b/codecrypt/package.json
@@ -85,6 +85,8 @@
     "test": "vscode-test"
   },
   "devDependencies": {
+    "@types/babel__core": "^7.20.5",
+    "@types/babel__traverse": "^7.28.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "22.x",
     "@types/vscode": "^1.106.1",
@@ -96,5 +98,11 @@
     "typescript-eslint": "^8.46.3",
     "webpack": "^5.103.0",
     "webpack-cli": "^6.0.1"
+  },
+  "dependencies": {
+    "@babel/parser": "^7.28.5",
+    "@babel/traverse": "^7.28.5",
+    "@babel/types": "^7.28.5",
+    "ts-morph": "^27.0.2"
   }
 }
