--- a/codecrypt/frontend/package.json
+++ b/codecrypt/frontend/package.json
@@ -19,7 +19,8 @@
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.3.1",
-    "three": "^0.181.2"
+    "three": "^0.181.2",
+    "tone": "^15.1.22"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.1",
