--- a/codecrypt/package.json
+++ b/codecrypt/package.json
@@ -89,10 +89,12 @@
     "@types/babel__traverse": "^7.28.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "22.x",
+    "@types/sinon": "^21.0.0",
     "@types/vscode": "^1.106.1",
     "@vscode/test-cli": "^0.0.12",
     "@vscode/test-electron": "^2.5.2",
     "eslint": "^9.39.1",
+    "sinon": "^21.0.0",
     "ts-loader": "^9.5.4",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.3",
@@ -104,6 +106,8 @@
     "@babel/parser": "^7.28.5",
     "@babel/traverse": "^7.28.5",
     "@babel/types": "^7.28.5",
+    "@types/dockerode": "^3.3.47",
+    "dockerode": "^4.0.9",
     "ts-morph": "^27.0.2"
   }
 }
