--- a/codecrypt/package.json
+++ b/codecrypt/package.json
@@ -121,6 +121,7 @@
     "@vscode/test-cli": "^0.0.12",
     "@vscode/test-electron": "^2.5.2",
     "eslint": "^9.39.1",
+    "fast-check": "^4.3.0",
     "sinon": "^21.0.0",
     "ts-loader": "^9.5.4",
     "typescript": "^5.9.3",
